--- a/programs.cfg
+++ b/programs.cfg
@@ -1,7 +1,7 @@
 {
 	["infuser-share-coal"] = {
 		files = {
-			["master/infuser-share/bin/infuser-share-coal.lua"] = "/bin/"
+			["master/infuser-share/bin/infuser-share-coal.lua"] = "/bin"
 		},
 		dependencies = {
             ["infuser-share-lib"] = "/lib"
