--- a/programs.cfg
+++ b/programs.cfg
@@ -1,7 +1,8 @@
 {
 	["infuser-share-coal"] = {
 		files = {
-			["master/infuser-share/bin/infuser-share-coal.lua"] = "/bin"
+			["master/infuser-share/bin/infuser-share-coal.lua"] = "/bin",
+            ["master/infuser-share/autostart/infuser-share-coal.lua"] = "/etc/rc.d"
 		},
 		dependencies = {
             ["infuser-share-lib"] = "/lib"
