--- a/programs.cfg
+++ b/programs.cfg
@@ -2,7 +2,7 @@
 	["infuser-share-coal"] = {
 		files = {
 			["master/infuser-share/bin/infuser-share-coal.lua"] = "/bin",
-            ["master/infuser-share/autostart/infuser-share-coal.lua"] = "/etc/rc.d"
+            ["master/infuser-share/autostart/infuser-share-coal.lua"] = "//etc/rc.d"
 		},
 		dependencies = {
             ["infuser-share-lib"] = "/lib"
