dynamic compressed, programs per infuser type

--- a/programs.cfg
+++ b/programs.cfg
@@ -14,6 +14,51 @@
 		hidden = false,
 		repo = "tree/master/infuser-share"
 	},
+	["infuser-share-diamond"] = {
+		files = {
+			["master/infuser-share/bin/infuser-share-diamond.lua"] = "/bin",
+            ["master/infuser-share/autostart/infuser-share-diamond.lua"] = "//etc/rc.d"
+		},
+		dependencies = {
+            ["infuser-share-lib"] = "/lib"
+		},
+		name = "Diamond Infuser Share",
+		description = "",
+		authors = "thevella",
+		note = "",
+		hidden = false,
+		repo = "tree/master/infuser-share"
+	},
+	["infuser-share-obsidian"] = {
+		files = {
+			["master/infuser-share/bin/infuser-share-obsidian.lua"] = "/bin",
+            ["master/infuser-share/autostart/infuser-share-obsidian.lua"] = "//etc/rc.d"
+		},
+		dependencies = {
+            ["infuser-share-lib"] = "/lib"
+		},
+		name = "Obsidian Infuser Share",
+		description = "",
+		authors = "thevella",
+		note = "",
+		hidden = false,
+		repo = "tree/master/infuser-share"
+	},
+	["infuser-share-redstone"] = {
+		files = {
+			["master/infuser-share/bin/infuser-share-redstone.lua"] = "/bin",
+            ["master/infuser-share/autostart/infuser-share-redstone.lua"] = "//etc/rc.d"
+		},
+		dependencies = {
+            ["infuser-share-lib"] = "/lib"
+		},
+		name = "Redstone Infuser Share",
+		description = "",
+		authors = "thevella",
+		note = "",
+		hidden = false,
+		repo = "tree/master/infuser-share"
+	},
     ["infuser-share-lib"] = {
         files = {
             ["master/infuser-share/lib/infuser-share-base.lua"] = "/lib"
@@ -26,5 +71,22 @@
         note = "Must only have transposers for one type of infuser connected to the network.",
         hidden = false,
         repo = "tree/master/infuser-share"
-    }
+    },
+	["infuser-share-all"] = {
+		files = {
+		},
+		dependencies = {
+            ["infuser-share-coal"] = "/bin",
+			["infuser-share-diamond"] = "/bin",
+			["infuser-share-obsidian"] = "/bin",
+			["infuser-share-redstone"] = "/bin"
+		},
+		name = "Coal Infuser Share",
+		description = "",
+		authors = "thevella",
+		note = "",
+		hidden = false,
+		repo = "tree/master/infuser-share"
+	}
+
 }
