tools for seting up computer

--- a/programs.cfg
+++ b/programs.cfg
@@ -87,6 +87,47 @@
 		note = "",
 		hidden = false,
 		repo = "tree/master/infuser-share"
+	},
+	["shedit"] = {
+		files = {
+			["master/tools/shedit.lua"] = "//bin"
+		},
+		dependencies = {
+		},
+		name = "Shedit - edit with syntax",
+		description = "",
+		authors = "LoganDark",
+		note = "From https://oc.cil.li/topic/1495-shedit-editlua-but-with-syntax-highlighting/ - https://pastebin.com/ZnwyunqL",
+		hidden = false,
+		repo = "tree/master/setup-computer"
+	},
+	["clone"] = {
+		files = {
+			["master/tools/clone.lua"] = "//bin"
+		},
+		dependencies = {
+		},
+		name = "Clone",
+		description = "Clone one mountpoint to another",
+		authors = "Joshua F",
+		note = "From https://oc.cil.li/topic/348-harddrive-clone/ - https://gist.github.com/Joshua-F/28c4dd466c8776ef9b9e",
+		hidden = false,
+		repo = "tree/master/setup-computer"
+	},
+	["setup-computer"] = {
+		files = {
+		},
+		dependencies = {
+			["clone"] = "//bin",
+			["shedit"] = "//bin"
+		},
+		name = "Clone",
+		description = "Clone one mountpoint to another",
+		authors = "Joshua F",
+		note = "From https://oc.cil.li/topic/348-harddrive-clone/ - https://gist.github.com/Joshua-F/28c4dd466c8776ef9b9e",
+		hidden = false,
+		repo = "tree/master/setup-computer"
 	}
+
 
 }
