--- a/programs.cfg
+++ b/programs.cfg
@@ -90,7 +90,7 @@
 	},
 	["shedit"] = {
 		files = {
-			["master/tools/shedit.lua"] = "//bin"
+			["master/setup-computer/tools/shedit.lua"] = "//bin"
 		},
 		dependencies = {
 		},
@@ -103,7 +103,7 @@
 	},
 	["clone"] = {
 		files = {
-			["master/tools/clone.lua"] = "//bin"
+			["master/setup-computer/tools/clone.lua"] = "//bin"
 		},
 		dependencies = {
 		},
